# pancratius

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .stylelintrc.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  astro.config.ts  editorial.yaml  eslint.config.ts  knip.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.scripts.json  tsconfig.tooling.json
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
audit/: bibliography_leaks.py  book_verse.py  css-values.ts  dialogue_counts.py  docx_integrity.py  docx_semantics.py  harness.ts  (+16 more)
docs/scratchpad/lineation-core/: .gitignore  ARCHITECTURE.md  E1-RUNBOOK.md  SPEC.md  STRATEGY-2026-06-10.md  STRATEGY-2026-06-11.md  WIRING-DESIGN.md  ml-handoff.md  pyproject.toml
docs/scratchpad/lineation-core/annotation-studio/: PRD.md  README.md  adjudicate.html
docs/scratchpad/lineation-core/annotations/: contested_labels.jsonl  labels.jsonl  line_labels.jsonl  panel_votes.jsonl  votes.jsonl
docs/scratchpad/lineation-core/annotations/eval_sets/: contested.json  det-gate.json  e1-instrument-frozen.json  e1-instrument-working.json  prompt_structural.json  reader_bench.json
docs/scratchpad/lineation-core/annotations/panel_runs/: e1-instrument-en.jsonl
docs/scratchpad/lineation-core/annotations/responses/: e1-instrument-en-adjudication.json  e1-instrument-ru-adjudication.json
docs/scratchpad/lineation-core/annotations/selections/: acquire.json  e1-instrument-en.json  e1-instrument-ru.json
docs/scratchpad/lineation-core/annotations/tasks/: e1-instrument-en-adjudication.manifest.json  e1-instrument-en.manifest.json  e1-instrument-ru-adjudication.manifest.json  e1-instrument-ru.manifest.json
docs/scratchpad/lineation-core/campaigns/prompts/: lineation-page-context.md  lineation-page.md  lineation-structure-text.md  lineation-v5-page.md  lineation-v6-page.md
docs/scratchpad/lineation-core/campaigns/recipes/: e1-instrument-en.toml  e1-instrument-ru.toml  policy-eval.toml  prompt-gate-eval.toml
docs/scratchpad/lineation-core/src/lineation_core/: __init__.py  annotations.py  artifact.py  build_records.py  compare.py  contested.py  corrections.py  identity.py  labels.py  panel_votes.py  paths.py  physics.py  producer.py  recon.py  records.py  review_queue.py  selection.py  sequence.py  source_view.py  store.py  student.py
docs/scratchpad/lineation-core/src/lineation_core/evaluation/: __init__.py  compare.py  contested.py  datasets.py  det_regression.py  manifest.py  metrics.py  policy_replay.py  prices.py  prices.toml  reader_metrics.py  signal_bakeoff.py  study.py  working_readout.py
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/: RESULTS-student-vs-panel.md
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-10-contested-gate/: experiment.toml  manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-10-contract-roster/: experiment.toml  manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-10-dsflash-temp/: experiment.toml  manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-10-qwen-temp/: experiment.toml  manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-10-qwen235b-keyed-temp/: experiment.toml  manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-10-tsv-smoke/: experiment.toml  manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-11-e0-corpus-recon/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-13-e2-signal-bakeoff/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-13-recon-bilingual/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-13-working-readout/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-14-bare-run-precision/: manifest.json  population.json  report.md  sample.json  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-14-bare-run-precision/_scripts/: estimate.py  labels.json  render_sample.py  sample.py  scan_population.py
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-14-e2-signal-bakeoff/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-14-recon-postmerge/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/evaluation/experiments/2026-06-14-working-readout/: manifest.json  report.md  scorecard.json
docs/scratchpad/lineation-core/src/lineation_core/teacher/: __init__.py  contracts.py  decision.py  openrouter.py  panel.py  promote.py  recipes.py  render.py  responses.py  tasks.py
docs/scratchpad/lineation-core/tests/: conftest.py  test_annotations.py  test_annotations_resolve.py  test_artifact.py  test_bilingual.py  test_compare.py  test_contested.py  test_corrections.py  test_datasets.py  test_decision.py  test_det_regression.py  test_e2e.py  test_identity.py  test_ingest_safety.py  test_io_boundary.py  test_labels.py  test_manifest.py  test_metrics.py  test_panel.py  test_panel_safety.py  test_physics_font.py  test_policy_replay.py  test_prices.py  test_producer.py  test_reader_metrics.py  test_recipes.py  test_recon.py  test_render.py  test_responses.py  test_review_queue.py  test_route.py  test_selection.py  test_sequence.py  test_signal_bakeoff.py  test_store.py  test_student.py  test_study_boundary.py  test_study_config.py  test_study_run.py  test_tasks.py  (+2 more)
(+2591 files in other folders)
