[project]
name = "pancratius"
version = "0.1.0"
description = "Python tooling for the Pancratius static library"
requires-python = ">=3.13"
dependencies = [
  "pyyaml>=6.0.2",
  "pillow>=10.4",
  "google-api-python-client>=2.140",
  "docxcompose>=2.1.0",
  "python-docx>=1.2.0",
]

[project.optional-dependencies]
graph = [
  "pymorphy3>=2.0.2",
  "pymorphy3-dicts-ru>=2.4.417150",
  "networkx>=3.2",
  "python-louvain>=0.16",
  "regex>=2024.5.15",
  "scipy>=1.11",
  "igraph>=0.11",
  "leidenalg>=0.10",
]
embed = [
  "mlx-embeddings>=0.1.0",
  "mlx>=0.20",
  "huggingface_hub>=0.20",
  "regex>=2024.5.15",
  "razdel>=0.5.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "igraph>=0.11",
  "leidenalg>=0.10",
  "hdbscan>=0.8.40",
  "scikit-learn>=1.4",
  "pymorphy3>=2.0.2",
  "pymorphy3-dicts-ru>=2.4.417150",
]

[project.scripts]
pancratius = "pancratius.cli:main"

[dependency-groups]
dev = [
  "google-api-python-client-stubs>=1.37.0",
  "pytest>=9.0",
  "ruff>=0.15.14",
  "ty==0.0.40",
  "types-networkx>=3.6.1.20260518",
  "types-pillow>=10.2.0.20240822",
  "types-pyyaml>=6.0.12.20260518",
  "types-regex>=2026.5.9.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pancratius"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = ["--strict-config", "--strict-markers", "-ra"]
xfail_strict = true
markers = [
  "pandoc: tests that require a local pandoc executable and DOCX conversion stack",
]

[tool.ruff]
target-version = "py313"
line-length = 100
include = ["pancratius/**/*.py", "audit/**/*.py", "tests/python/**/*.py"]
extend-exclude = ["audit/fixtures"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "ANN",
  "B",
  "BLE",
  "I",
  "PLE",
  "PLW1510",
  "RET504",
  "RET505",
  "SIM102",
  "SIM103",
  "SIM105",
  "SIM115",
  "SIM117",
  "UP",
  "RUF005",
  "RUF100",
  "RUF013",
  "RUF018",
  "RUF022",
  "RUF043",
  "RUF046",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false
mypy-init-return = true
suppress-none-returning = false

[tool.ty.environment]
python-version = "3.13"
root = ["pancratius", "audit", "tests/python"]

[tool.ty.src]
include = ["pancratius", "audit", "tests/python"]
exclude = ["audit/fixtures"]

[tool.ty.rules]
unresolved-reference = "error"
ignore-comment-unknown-rule = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"

possibly-unresolved-reference = "warn"
possibly-missing-import = "warn"
possibly-missing-attribute = "warn"
deprecated = "warn"
unused-awaitable = "warn"

[tool.ty.analysis]
respect-type-ignore-comments = false

allowed-unresolved-imports = [
  "community.**",
  "hdbscan.**",
  "igraph.**",
  "leidenalg.**",
  "mlx.**",
  "mlx_embeddings.**",
  "networkx.**",
  "numpy.**",
  "pymorphy3.**",
  "razdel.**",
  "regex.**",
  "scipy.**",
  "sklearn.**",
]
replace-imports-with-any = []
